--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="sidebar">
             <h2>Connect With Me</h2>
             <div class="social-media-icons">
-                <a href="https://github.com/taylorcarlson333" target="_blank" class="github">
+                <a href="https://github.com/taylorcarlson333">
                     <img src="git.png" height="50px">
                 </a>
-                <a href="https://www.linkedin.com/in/taylor-carlson03/" target="_blank" class="linkedin">
+                <a href="https://www.linkedin.com/in/taylor-carlson03/">
                     <img src="linkedin.png" height="50px">
                 </a>
-                <a href="https://stackoverflow.com" target="_blank" class="stackoverflow">
+                <a href="https://stackoverflow.com">
                     <img src="soverflow.png" height="50px">
                 </a>
             </div>
